[tool.poetry]
name = "onepassword_managers"
version = "0.1.4"
description = ""
authors = ["James Mark <james.david.mark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.13.7"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onepassword_managers = 'onepassword_managers.onepassword_managers:main'